fix: Set test option `BUILD_TESTING` on the top [skip ci]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,6 @@ project(starter VERSION 0.0.1 LANGUAGES CXX)
 # Customize project_options
 include(enable_customized_project_options)
 
-# Options
-option(BUILD_STARTER_TESTING "Build the testing tree." ON)
-
 # workaround: RPATH stuff
 # !!!NOT RECOMMENDED!!! see https://github.com/ossf/wg-best-practices-os-developers/blob/main/docs/Compiler-Hardening-Guides/Compiler-Options-Hardening-Guide-for-C-and-C%2B%2B.md
 include(rpath)
@@ -18,24 +15,26 @@ include(rpath)
 # Include CTest before any tests
 include(CTest)
 
-# Add handy test wrappers
-include(add_test)
+if(BUILD_TESTING)
+  # Add handy test wrappers
+  include(add_test)
 
-# Common test config
-add_test_config(common
-  DEPENDENCIES_CONFIG
-  Catch2
+  # Common test config
+  add_test_config(common
+    DEPENDENCIES_CONFIG
+    Catch2
 
-  LIBRARIES
-  starter_project_options
-  starter_project_warnings
+    LIBRARIES
+    starter_project_options
+    starter_project_warnings
 
-  SYSTEM_LIBRARIES
-  Catch2::Catch2WithMain
+    SYSTEM_LIBRARIES
+    Catch2::Catch2WithMain
 
-  EXECUTE_ARGS
-  --reporter xml
-)
+    EXECUTE_ARGS
+    --reporter xml
+  )
+endif()
 
 # Add src
 add_subdirectory(my_app)
