--- a/my_header_only_lib/CMakeLists.txt
+++ b/my_header_only_lib/CMakeLists.txt
@@ -16,6 +16,6 @@ target_link_system_libraries(my_header_only_lib # Link dependencies
 )
 
 # Tests
-if(BUILD_TESTING)
+if(starter_BUILD_TESTING)
   add_subdirectory(test)
 endif()
