feat: Make this project easy to be renamed
- Move project-wide options into cmake folder
- Rename all `starter` in this project to `replace_this`
- Prefix configurable cmake files with `replace_this_`

--- a/my_header_only_lib/CMakeLists.txt
+++ b/my_header_only_lib/CMakeLists.txt
@@ -2,8 +2,8 @@ add_library(my_header_only_lib INTERFACE)
 target_include_interface_directories(my_header_only_lib include) # Includes
 target_link_libraries(my_header_only_lib
   INTERFACE
-  starter_project_options
-  starter_project_warnings
+  replace_this_project_options
+  replace_this_project_warnings
 )
 
 target_find_dependencies(my_header_only_lib # Find dependencies
@@ -16,6 +16,6 @@ target_link_system_libraries(my_header_only_lib # Link dependencies
 )
 
 # Tests
-if(starter_BUILD_TESTING)
+if(replace_this_BUILD_TESTING)
   add_subdirectory(test)
 endif()
