--- a/my_lib/CMakeLists.txt
+++ b/my_lib/CMakeLists.txt
@@ -6,8 +6,8 @@ target_sources(my_lib
 target_include_interface_directories(my_lib include) # Includes
 target_link_libraries(my_lib
   PRIVATE
-  starter_project_options
-  starter_project_warnings
+  replace_this_project_options
+  replace_this_project_warnings
 )
 
 target_find_dependencies(my_lib # Find dependencies
@@ -20,6 +20,6 @@ target_link_system_libraries(my_lib # Link dependencies
 )
 
 # Tests
-if(starter_BUILD_TESTING)
+if(replace_this_BUILD_TESTING)
   add_subdirectory(test)
 endif()
