--- a/sample_lib/test/CMakeLists.txt
+++ b/sample_lib/test/CMakeLists.txt
@@ -1,6 +1,1 @@
-add_test_config(sample_lib
-  SYSTEM_LIBRARIES
-  sample_header_only_lib
-)
-
-add_library_test(sample_lib sort CONFIGS common sample_lib SOURCES sort.cpp)
+add_library_test(sample_lib concat CONFIGS common SOURCES concat.cpp)
