--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,36 @@
 cmake_minimum_required(VERSION 3.25)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
-include(sample_project_name_options)
-include(sample_project_name_fetch_project_options)
+include(sample_project_options)
+include(sample_project_fetch_project_options)
 
-project(sample_project_name VERSION 0.0.1 LANGUAGES CXX)
+project(sample_project VERSION 0.0.1 LANGUAGES CXX)
 
 # Propagate customized project_options. That is,
 # - Some global project settings like default C++ version and so on.
-# - `sample_project_name_project_options` and `sample_project_name_project_warnings` interface libraries that contain C++ options
-include(sample_project_name_custom_project_options)
+# - `sample_project_project_options` and `sample_project_project_warnings` interface libraries that contain C++ options
+include(sample_project_custom_project_options)
 
 # workaround: RPATH stuff
 # !!!NOT RECOMMENDED!!! see https://github.com/ossf/wg-best-practices-os-developers/blob/main/docs/Compiler-Hardening-Guides/Compiler-Options-Hardening-Guide-for-C-and-C%2B%2B.md
 include(rpath)
 
-if(sample_project_name_BUILD_TESTING OR sample_project_name_BUILD_FUZZ_TESTING)
+if(sample_project_BUILD_TESTING OR sample_project_BUILD_FUZZ_TESTING)
   # Include CTest before any tests
   include(CTest)
 
   # Add handy test wrappers
   include(add_test)
 
-  if(sample_project_name_BUILD_TESTING)
+  if(sample_project_BUILD_TESTING)
     # Common test config
     add_test_config(common
       DEPENDENCIES_CONFIG
       Catch2
 
       LIBRARIES
-      sample_project_name_project_options
-      sample_project_name_project_warnings
+      sample_project_project_options
+      sample_project_project_warnings
 
       SYSTEM_LIBRARIES
       Catch2::Catch2WithMain
@@ -40,14 +40,14 @@ if(sample_project_name_BUILD_TESTING OR sample_project_name_BUILD_FUZZ_TESTING)
     )
   endif()
 
-  if(sample_project_name_BUILD_FUZZ_TESTING)
-    add_library(sample_project_name_project_libfuzzer INTERFACE)
-    target_link_libraries(sample_project_name_project_libfuzzer
+  if(sample_project_BUILD_FUZZ_TESTING)
+    add_library(sample_project_project_libfuzzer INTERFACE)
+    target_link_libraries(sample_project_project_libfuzzer
       INTERFACE
       -coverage
       -fsanitize=fuzzer,undefined,address
     )
-    target_compile_options(sample_project_name_project_libfuzzer
+    target_compile_options(sample_project_project_libfuzzer
       INTERFACE
       -fsanitize=fuzzer,undefined,address
     )
@@ -68,8 +68,8 @@ package_project(
   sample_app
   sample_lib
   sample_header_only_lib
-  sample_project_name_project_options
-  sample_project_name_project_warnings
+  sample_project_project_options
+  sample_project_project_warnings
 )
 
 detect_architecture(arch)
