fix: Remove -f option when adding conan remote [skip ci]
Since we only cache ~/.conan2/p, remote settings won't be cached, so we don't need to forcely adding conan remote.

--- a/.github/actions/setup_conan/action.yml
+++ b/.github/actions/setup_conan/action.yml
@@ -61,7 +61,7 @@ runs:
       if: inputs.recipe_repository != ''
       shell: bash
       run: |
-        conan remote add local conan_recipes -f
+        conan remote add local conan_recipes
 
     - name: Cleanup conan system packages (they are not properly cached)
       shell: bash
