--- a/.github/actions/setup_conan/action.yml
+++ b/.github/actions/setup_conan/action.yml
@@ -1,12 +1,18 @@
 name: "setup_conan"
 description: "sets up conan"
 inputs:
-  profile:
+  os:
     required: true
-    description: "The conan profile to be used"
-  config_folder:
+    description: "Operator system"
+  arch:
     required: true
-    description: "The conan config folder to be installed by `conan config install <config_folder>`"
+    description: "Architecutre"
+  compiler:
+    required: true
+    description: "Compiler"
+  build_type:
+    required: true
+    description: "Build type"
   args:
     description: "Additional conan args"
     default: ""
@@ -17,9 +23,9 @@ outputs:
   home:
     description: "The conan home path"
     value: ${{ steps.output.outputs.home }}
-  profile:
+  profile: # FIXME: Separate host and build profile to allow ci for compile compilation
     description: "The conan profile to be used"
-    value: ${{ inputs.profile }}
+    value: ${{ steps.output.outputs.profile }}
   args:
     description: "The corresponding args that should be used in conan commands afterwards"
     value: ${{ steps.output.outputs.args }}
@@ -32,23 +38,44 @@ runs:
       run: |
         pip3 install conan
 
+    - name: Parse os and os version
+      id: parse_os
+      shell: bash
+      env:
+        VALUE: ${{ contains(matrix.os, '-') && matrix.os || format('{0}-{1}', matrix.os, 'latest') }}
+      run: |
+        export NAME=${VALUE%%-*}
+        echo name=${NAME/ubuntu/linux} >> "$GITHUB_OUTPUT"
+
+        export VERSION=${VALUE##*-}
+        echo version=$VERSION >> "$GITHUB_OUTPUT"
+
+    - name: Parse compiler and compiler version
+      id: parse_compiler
+      shell: bash
+      env:
+        VALUE: ${{ contains(matrix.compiler, '-') && matrix.compiler || format('{0}-{1}', matrix.compiler, 'latest') }}
+      run: |
+        export NAME=${VALUE%%-*}
+        echo name=${NAME/llvm/clang} >> "$GITHUB_OUTPUT"
+
+        export VERSION=${VALUE##*-}
+        echo version=$VERSION >> "$GITHUB_OUTPUT"
+
     - name: Output
       id: output
       shell: bash
       run: |
+        export PROFILE=$(python3 script/match_conan_profile.py "${{ steps.parse_os.outputs.name }}-${{ steps.parse_os.outputs.version }}-${{ inputs.arch }}-${{ steps.parse_compiler.outputs.name }}-${{ steps.parse_compiler.outputs.version }}-${{ inputs.build_type }}")
         echo "home=$(conan config home)" >> "$GITHUB_OUTPUT"
-        echo "args=-pr:h '${{ inputs.profile }}' -pr:b '${{ inputs.profile }}' ${{ inputs.args }}" >> "$GITHUB_OUTPUT"
-
-    - name: Check the existence of the corresponding profile
-      uses: andstor/file-existence-action@v3.0.0
-      with:
-        files: "${{ inputs.config_folder }}/profiles/${{ inputs.profile }}"
-        fail: true
+        # FIXME: Separate host and build profile to allow ci for compile compilation
+        echo "profile=$PROFILE" >> "$GITHUB_OUTPUT"
+        echo "args=-pr:a '$PROFILE' -s:b 'build_type=Release' -s:h 'build_type=${{ inputs.build_type }}' ${{ inputs.args }}" >> "$GITHUB_OUTPUT"
 
     - name: Install conan config folder
       shell: bash
       run: |
-        conan config install ${{ inputs.config_folder }}
+        conan config install ./conan
 
     - name: Checkout the specified recipe repository
       if: inputs.recipe_repository != ''
