--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         os:
           - ubuntu-22.04
           - macos-13
-          - macos-14  # M1
+          - macos-14 # M1
           - windows-2022
         compiler:
           # you can specify the version after `-` like "llvm-13.0.0".
@@ -85,7 +85,7 @@ jobs:
 
     steps:
       - name: Linux - Maximize build disk space
-        uses: easimon/maximize-build-space@v8
+        uses: easimon/maximize-build-space@v10
         if: runner.os == 'Linux'
         with:
           root-reserve-mb: 30720
@@ -104,7 +104,7 @@ jobs:
           developer_mode: ${{ matrix.developer_mode }}
 
       - name: Setup cpp
-        uses: aminya/setup-cpp@v1
+        uses: aminya/setup-cpp@v0.37.0
         with:
           compiler: ${{ matrix.compiler }}
           vcvarsall: ${{ contains(matrix.os, 'windows')}}
@@ -138,27 +138,26 @@ jobs:
           conan build . ${{ steps.conan.outputs.args }}
 
       - name: Unix - Coverage
-        if: runner.os != 'Windows' && matrix.build_type == 'Debug'
+        if: runner.os != 'Windows'
         working-directory: build/${{ matrix.compiler_name }}
         run: |
           ctest -C ${{ matrix.build_type }}
           gcovr -j ${{ env.nproc }} --delete --root ../../ --print-summary --xml-pretty --xml coverage.xml . --gcov-executable '${{ matrix.gcov_executable }}'
 
       - name: Windows - Coverage
-        if: runner.os == 'Windows' && matrix.build_type == 'Debug'
+        if: runner.os == 'Windows'
         working-directory: build/${{ matrix.compiler_name }}
         run: |
           OpenCppCoverage.exe --export_type cobertura:coverage.xml --cover_children -- ctest -C ${{ matrix.build_type }}
 
       - name: Publish to codecov
-        if: matrix.build_type == 'Debug'
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4.4.0
         with:
+          files: ./build/${{ matrix.compiler_name }}/coverage.xml
           flags: ${{ runner.os }}
           name: ${{ runner.os }}-coverage
-          files: ./build/${{ matrix.compiler_name }}/coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
       - name: CPack
         if: matrix.package_generator != ''
@@ -167,7 +166,7 @@ jobs:
           cpack -C ${{ matrix.build_type }} -G ${{ matrix.package_generator }} -B _package -V
 
       - name: Publish tagged
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2.0.5
         if: ${{ startsWith(github.ref, 'refs/tags/') && matrix.package_generator != '' }}
         with:
           files: |
