Revert "feat: Bump ci environment version"
This reverts commit 19b2988cbf8225701d69a34f3577f12a116a9a48.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,11 @@ jobs:
       matrix:
         os:
           - ubuntu-22.04
-          - macos-13
-          - macos-14 # M1
+          - macos-12
           - windows-2022
         compiler:
           # you can specify the version after `-` like "llvm-13.0.0".
-          - llvm-17.0.5
+          - llvm
           - gcc-13
           - msvc
         build_type:
@@ -50,9 +49,7 @@ jobs:
         exclude:
           - os: ubuntu-22.04
             compiler: msvc
-          - os: macos-13
-            compiler: msvc
-          - os: macos-14
+          - os: macos-12
             compiler: msvc
 
           # FIXME: Solve annotated_string mismatch in Windows to enable developer mode totally
@@ -65,13 +62,13 @@ jobs:
 
         include:
           # Inject gcov_executable variable
-          - compiler: llvm-17.0.5
+          - compiler: llvm
             gcov_executable: "llvm-cov gcov"
           - compiler: gcc-13
             gcov_executable: gcov-13
 
           # Inject actual compiler name
-          - compiler: llvm-17.0.5
+          - compiler: llvm
             compiler_name: clang
           - compiler: gcc-13
             compiler_name: gcc
@@ -117,7 +114,7 @@ jobs:
           cppcheck: true
           clangtidy: true
 
-          gcovr: true
+          gcovr: 7.2
           opencppcoverage: true
 
       - name: Setup conan
