typo: operating system [skip ci]

--- a/.github/actions/setup_conan/action.yml
+++ b/.github/actions/setup_conan/action.yml
@@ -3,7 +3,7 @@ description: "sets up conan"
 inputs:
   os:
     required: true
-    description: "Operator system"
+    description: "Operating system"
   arch:
     required: true
     description: "Architecutre"
