--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
           cppcheck: true
           clangtidy: true
 
-          gcovr: true
+          gcovr: 7.2
           opencppcoverage: true
 
       - name: Setup conan
