--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
           cppcheck: true
           clangtidy: true
 
-          gcovr: 7.2
+          gcovr: 7.2 # The default version 5.2 stucks on macos gcc
           opencppcoverage: true
 
       - name: Setup conan
