Fix asan runtime issue

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -89,6 +89,9 @@ jobs:
           arch: x86_64
           compiler: ${{ matrix.compiler }}
           build_type: ${{ matrix.build_type }}
+          # Fix "ASan runtime does not come first in initial library list; you should either link runtime to your application or manually preload it with LD_PRELOAD."
+          # Learnt from https://github.com/igraph/igraph/issues/1181
+          args: -c tools.build:cflags=['-static-libasan'] -c tools.build:cxxflags=['-static-libasan']
 
       - name: Configure cmake
         run: |
