--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -91,7 +91,7 @@ jobs:
           build_type: ${{ matrix.build_type }}
           # Fix "ASan runtime does not come first in initial library list; you should either link runtime to your application or manually preload it with LD_PRELOAD."
           # Learnt from https://github.com/igraph/igraph/issues/1181
-          args: -c tools.build:cflags=['-static-libasan'] -c tools.build:cxxflags=['-static-libasan']
+          args: -c tools.build:cflags+=-static-libasan -c tools.build:cxxflags+=-static-libasan
 
       - name: Configure cmake
         run: |
