--- a/.github/actions/setup_cache/action.yml
+++ b/.github/actions/setup_cache/action.yml
@@ -1,15 +1,11 @@
 name: "setup_cache"
 description: "sets up the shared cache"
 inputs:
-  compiler:
+  key:
     required: true
-    description: "Compiler"
-  build_type:
-    required: true
-    description: "Build type"
-  developer_mode:
-    required: true
-    description: "Developer mode"
+    description: "Cache key"
+  restore_key:
+    description: "Restore key when cache misses"
 
 runs:
   using: "composite"
@@ -20,14 +16,14 @@ runs:
         path: |
           ~/.cache/pip
           ~/.ccache
-        key: ${{ runner.os }}-${{ inputs.compiler }}-${{ inputs.build_type }}-${{ inputs.developer_mode }}-${{ hashFiles('**/CMakeLists.txt') }}
+        key: ${{ inputs.key }}-${{ hashFiles('**/CMakeLists.txt') }}
         restore-keys: |
-          ${{ runner.os }}-${{ inputs.compiler }}-${{ inputs.build_type }}
+          ${{ inputs.restore_key != '' && inputs.restore_key || inputs.key }}
 
     - name: Cache conan
       uses: actions/cache@v4.0.2
       with:
         path: ~/.conan2/p
-        key: ${{ runner.os }}-${{ inputs.compiler }}-${{ inputs.build_type }}-${{ inputs.developer_mode }}-${{ hashFiles('conanfile.py', 'conanfile.txt') }}
+        key: ${{ inputs.key }}-${{ hashFiles('conanfile.py', 'conanfile.txt') }}
         restore-keys: |
-          ${{ runner.os }}-${{ inputs.compiler }}-${{ inputs.build_type }}
+          ${{ inputs.restore_key != '' && inputs.restore_key || inputs.key }}
