--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,17 +72,10 @@ jobs:
             package_generator: ZIP
 
     steps:
-      - name: Parse environment
-        id: parsed
-        uses: ./.github/actions/parse_environment
-        with:
-          os: ${{ matrix.os }}
-          compiler: ${{ matrix.compiler }}
-
       # Use this if a fairly large library is requried, like building and using llvm as a library.
       # - name: Linux - Maximize build disk space
       #   uses: easimon/maximize-build-space@v10
-      #   if: steps.parsed.outputs.os_name == 'linux'
+      #   if: runner.os == 'Linux'
       #   with:
       #     root-reserve-mb: 30720
       #     swap-size-mb: 1024
@@ -91,6 +84,13 @@ jobs:
       #     remove-dotnet: "true"
 
       - uses: actions/checkout@v4
+
+      - name: Parse environment
+        id: parsed
+        uses: ./.github/actions/parse_environment
+        with:
+          os: ${{ matrix.os }}
+          compiler: ${{ matrix.compiler }}
 
       - name: Setup cache
         uses: ./.github/actions/setup_cache
@@ -102,7 +102,7 @@ jobs:
         uses: aminya/setup-cpp@v0.37.0
         with:
           compiler: ${{ matrix.compiler }}
-          vcvarsall: ${{ steps.parsed.outputs.os_name == 'windows' }}
+          vcvarsall: ${{ runner.os == 'Windows' }}
 
           cmake: true
           ninja: true
@@ -131,14 +131,14 @@ jobs:
           conan build . ${{ steps.conan.outputs.args }}
 
       - name: Unix - Coverage
-        if: steps.parsed.outputs.os_name != 'windows'
+        if: runner.os != 'Windows'
         working-directory: build/${{ steps.parsed.outputs.compiler_name }}
         run: |
           ctest -C ${{ matrix.build_type }}
           gcovr -j ${{ env.nproc }} --delete --root ../../ --print-summary --xml-pretty --xml coverage.xml . --gcov-executable '${{ steps.parsed.outputs.gcov_executable }}'
 
       - name: Windows - Coverage
-        if: steps.parsed.outputs.os_name == 'windows'
+        if: runner.os == 'Windows'
         working-directory: build/${{ steps.parsed.outputs.compiler_name }}
         run: |
           OpenCppCoverage.exe --export_type cobertura:coverage.xml --cover_children -- ctest -C ${{ matrix.build_type }}
@@ -147,8 +147,8 @@ jobs:
         uses: codecov/codecov-action@v4.4.0
         with:
           files: ./build/${{ steps.parsed.outputs.compiler_name }}/coverage.xml
-          flags: ${{ steps.parsed.outputs.os_name }}
-          name: ${{ steps.parsed.outputs.os_name }}-coverage
+          flags: ${{ runner.os }}
+          name: ${{ runner.os }}-coverage
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
 
