--- a/.github/actions/parse_environment/action.yml
+++ b/.github/actions/parse_environment/action.yml
@@ -10,25 +10,28 @@ inputs:
 outputs:
   os_name:
     description: "Operating system name (ubuntu converted to linux)"
-    value: ${{ steps.parse_os.outputs.name }}
+    value: ${{ steps.os.outputs.name }}
   os_version:
     description: "Operating system version (if not set in inputs.os, set to latest)"
-    value: ${{ steps.parse_os.outputs.version }}
+    value: ${{ steps.os.outputs.version }}
+  arch:
+    description: "Architecture"
+    value: ${{ steps.arch.outputs.value }}
   compiler_name:
     description: "Compiler name (llvm converted to clang)"
-    value: ${{ steps.parse_compiler.outputs.name }}
+    value: ${{ steps.compiler.outputs.name }}
   compiler_version:
     description: "Compiler version (if not set in inputs.compiler, set to latest)"
-    value: ${{ steps.parse_compiler.outputs.version }}
+    value: ${{ steps.compiler.outputs.version }}
   gcov_executable:
     description: "The corresponding gcov_executable (Available only for clang and gcc)"
-    value: ${{ steps.parse_gcov.outputs.value }}
+    value: ${{ steps.gcov.outputs.value }}
 
 runs:
   using: "composite"
   steps:
     - name: Parse os and os version
-      id: parse_os
+      id: os
       shell: bash
       env:
         VALUE: ${{ contains(matrix.os, '-') && matrix.os || format('{0}-{1}', matrix.os, 'latest') }}
@@ -39,8 +42,14 @@ runs:
         export VERSION=${VALUE##*-}
         echo version=$VERSION >> "$GITHUB_OUTPUT"
 
+    - name: Parse architecture
+      id: arch
+      shell: bash
+      run: |
+        echo value=${{ steps.os.outputs.name == 'macos' && steps.os.outputs.version >= '14' && 'armv8' || 'x86_64' }} >> "$GITHUB_OUTPUT"
+
     - name: Parse compiler and compiler version
-      id: parse_compiler
+      id: compiler
       shell: bash
       env:
         VALUE: ${{ contains(matrix.compiler, '-') && matrix.compiler || format('{0}-{1}', matrix.compiler, 'latest') }}
@@ -52,7 +61,7 @@ runs:
         echo version=$VERSION >> "$GITHUB_OUTPUT"
 
     - name: Parse gcov
-      id: parse_gcov
+      id: gcov
       shell: bash
       run: |
-        echo "value=${{ contains(matrix.compiler, 'llvm') && 'llvm-cov gcov' || contains(matrix.compiler, 'gcc') && format('{0}-{1}', 'gcov', steps.parse_compiler.outputs.version) || '' }}" >> "$GITHUB_OUTPUT"
+        echo "value=${{ contains(matrix.compiler, 'llvm') && 'llvm-cov gcov' || contains(matrix.compiler, 'gcc') && format('{0}-{1}', 'gcov', steps.compiler.outputs.version) || '' }}" >> "$GITHUB_OUTPUT"
